--- a/template/login.html
+++ b/template/login.html
@@ -1,12 +1,26 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title> Resource Manager Login </title>
+    <title>Login</title>
+    <link href="/static/css/jcarousel.css" rel="stylesheet" />
+    <link href="/static/css/notification.css" rel="stylesheet" />
 </head>
-
 <body>
     <hr/>
-    <h1> You must login in order to manage reservations. </h1> <hr/>
+
+    <h1>please login:</h1>
+    <br/>
+
+
+     <!--<form id="login_form" action="/auth/login/" method="post">-->
+        <!--<label class="grey" for="log">Username</label><br />-->
+        <!--<input type="text" name="username" style="width:99%" id="username"><br>-->
+        <!--<label class="grey" for="pwd">Password</label><br />-->
+        <!--<input type="password" name="password" style="width:99%" id="password"><br />-->
+        <!--<input type="submit" id="loginbtn" name="login" value="LOGIN" class="button"><br />-->
+        <!--<input id = "signin-btn" class = "btn btn-blue" type = "submit" value = "Sign In" tabindex = "3">-->
+
+    <!--</form>-->
     <form action = "/auth/login/" method = "post" id = "login_form">
         <fieldset>
             <label for = "username">Username </label>
@@ -23,6 +37,11 @@
             <input id = "signin-btn" class = "btn btn-blue" type = "submit" value = "Sign In" tabindex = "3">
         <div>
     </form>
-    
+
+    <br/>
+    <a href="/register/">register</a>
+    <br/>
+
 </body>
+
 </html>
