combined amy and danielle's code

--- a/template/learn.html
+++ b/template/learn.html
@@ -66,42 +66,11 @@
         <div class="page-content inset" data-spy="scroll" data-target="#spy">
             <div class="row">
                 <div class="jumbotron text-center" >
-		    <h3>Welcome {{ user }} </h3>
-		    <p>Here you can view all of your account information.<p>
-		    <br/>
-		    <p>Last sessions recommendations:</p>
-		    
-		    <form method="post" class="bad_langs" action="#">
-			<script src="/wp-includes/js/addInput.js" language="Javascript" type="text/javascript"></script>
-
-			<fieldset class = "textbox">
-			    <div id="dynamicInput">
-			    Entry 1<br><input type="text" name="myInputs[]">
-			    </div>
-			    <button class="submit button" type="button">Submit</button>
-			    <input type="button" value="Add another text input" onClick="addInput('dynamicInput');">
-			</fieldset>
-
-		    
-		        <fieldset class="textbox">
-		        <label class="password">
-			    <span>If there are any languages that you dont want to use, please list them here: </span>
-			    <input id="bad_langs" name="bad_langs" value="" type="bad_langs">
-		        </label>
-		        <button class="submit button" type="button">Submit</button>	
-			</fieldset>
-			</form>
-		    </div>
-		    
-		    <div class="bs-example">
-			<input type="text" class="typeahead tt-query" autocomplete="off" spellcheck="false">
-		    </div>
-		    <div class = "container">
-			{% for lang in languages %}
-			    <p>{{ lang }} </p>
-			{% end %}
-		    </div>
-		    
+		
+		/* Do all coding in here */
+		
+		
+		</div>    
             </div>
         </div>
     </div>
