Home page is working and checkboxes in learn a new language page

--- a/template/learn.html
+++ b/template/learn.html
@@ -67,9 +67,21 @@
             <div class="row">
                 <div class="jumbotron text-center" >
 		
-		/* Do all coding in here */
-		
-		
+		    <p> Select the checkboxes that fits your interests </p> <br>
+		    <input type = "Checkbox" Name = "Declarative" Value = "Declarative"> Declarative <br>
+		    <input type = "Checkbox" Name = "Imperative" Value = "Imperative"> Imperative <br>
+		    <input type = "Checkbox" Name = "Compiled" Value  = "Compiled"> Compiled <br>
+		    <input type = "Checkbox" Name = "Interpreted" Value = "Interpreted"> Interpreted <br>
+		    <input type = "Checkbox" Name = "Functional" Value = "Functional"> Functional <br>
+		    <!--<input type = "Checkbox" Name = "JVM" Value = "JVM"> JVM <br>-->
+		    <!--<input type = "Checkbox" Name = "SQVM" Value = "SQVM"> SQVM <br>-->
+		    <!--<input type = "Checkbox" Name = "WebApp" Value = "WebApp"> Web App<br>-->
+		    <!--<input type = "Checkbox" Name = "Game" Value = "Game"> Game<br>-->
+		    <!--<input type = "Checkbox" Name = "MobileApp" Value = "MobileApp"> Mobile App<br>-->
+		    <!--<input type = "Checkbox" Name = "InfoProcessing" Value ="InfoProcessing"> Info Processing<br>-->
+		    <!--<input type = "Checkbox" Name = "UtilityScripts" Value = "UtilityScripts"> Utility Scripts<br>-->
+		    <br>
+		    <button type ="submit" form = "submit" value= "Submit"> Submit</button>
 		</div>    
             </div>
         </div>
