--- a/template/account.html
+++ b/template/account.html
@@ -9,8 +9,6 @@
         <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css">
         <link href="/static/css/stylesheet.css" rel="stylesheet" />
 	
-	<script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.0.3/jquery.js"></script>
-	
 	<script>
 	    var counter = 1;
 	    var limit = 3;
@@ -20,13 +18,19 @@
 		}
 		else {
 		    var newdiv = document.createElement('div');
-		    newdiv.innerHTML = "Entry " + (counter + 1) + " <br><input type='text' name='myInputs[]'>";
+		    newdiv.innerHTML =  "<input type='text' name='myInputs" + counter + "'>";
 		    document.getElementById(divName).appendChild(newdiv);
 		    counter++;
 		}
 	    }
 	</script>
-    
+	
+	<script>
+	    function outputUpdate(vol, count) {
+		document.querySelector('#rate-' + count).value = vol;
+	    }
+	</script>
+	
     </head>
 <body>
 
@@ -66,47 +70,98 @@
         <div class="page-content inset" data-spy="scroll" data-target="#spy">
             <div class="row">
                 <div class="jumbotron text-center" >
-		    <h3>Welcome {{ user }} </h3>
-		    <p>Here you can view all of your account information.<p>
+		    <header><h3><b>Username: {{ user }} <b/></h3></header>
+		    <p>Here you can view all of your account information<p>
 		    <br/>
-		    <p>Last sessions recommendations:</p>
+		    <p><b>Please rate how proficient you are in each of these languages (0 for beginner, 10 for expert)</b></p>
+		    <div class = "container">
+			<table class = "table">
+			    <tbody>
+				{% for i in range(0, len(languages)) %}
+				    <tr>
+					<td>
+					    <p id = "language">{{ languages[i] }}</p>
+					</td>
+					<td>
+					    <input type="range" min = 0 max = 10 value = 0 step = 1 id = "slider" oninput = "outputUpdate(value, {{str(i)}})" list = "volsettings">
+					    <datalist id = "volsettings">
+						<option>0</option>
+						<option>1</option>
+						<option>2</option>
+						<option>3</option>
+						<option>4</option>
+						<option>5</option>
+						<option>6</option>
+						<option>7</option>
+						<option>8</option>
+						<option>9</option>
+						<option>10</option>
+					    </datalist>
+					    <output id="{{ 'rate-' + str(i) }}">0</output>
+					</td>
+				    </tr> 
+				{% end %}
+			    </tbody>
+			</table>
+		    </div><!--container-->
 		    
-		    <form method="post" class="bad_langs" action="#">
-			<script src="/wp-includes/js/addInput.js" language="Javascript" type="text/javascript"></script>
+		    <div>
 
-			<fieldset class = "textbox">
-			    <div id="dynamicInput">
-			    Entry 1<br><input type="text" name="myInputs[]">
+			{% if not new %}
+			    <p><b>Your most recent recommendations for a new Programming Language were:</b></p>
+			    <div class="container">
+			        {% for i in range(0, len(old_recs)) %}
+				    <p><b>{{ old_recs[i][0].upper() }}</b> with a relevance of <b>{{ old_recs[i][1]*100 }}%</b> to your given criteria </p>
+			        {% end %}
 			    </div>
-			    <button class="submit button" type="button">Submit</button>
-			    <input type="button" value="Add another text input" onClick="addInput('dynamicInput');">
-			</fieldset>
-
 		    
-		        <fieldset class="textbox">
-		        <label class="password">
-			    <span>If there are any languages that you dont want to use, please list them here: </span>
-			    <input id="bad_langs" name="bad_langs" value="" type="bad_langs">
-		        </label>
-		        <button class="submit button" type="button">Submit</button>	
-			</fieldset>
+			    <br/><br/><p><b>Here are the languages that you do not have interest in: </b></p>
+			    <div class = "container">
+				<ul>
+				    {% for ex in exceptions %}
+					<li>
+					{{ ex }}
+					<button id = "x" name = "remove" value = "{{ ex }}">&#x2717;</button>
+					</li>
+				    {% end %}
+				</ul>
+				<script>
+				var val
+				$("ul").on("click", "button", function(e) {
+				    e.preventDefault();
+				    val = $(this).parent()
+				    document.getElementById('hiding').innerHTML = this.value;
+				    $(this).parent().remove();
+				});
+				
+				</script>
+			    </div>
+			    
+			    <p name = 'hiding' id = 'hiding'></p>
+
+			{% end %}
+
+		    </div>
+		    
+		    <div>
+			<p>Add any languages that you do no have interest in:</p>
+			<form method="POST" class="input" action="/account/">
+			    <div id="dynamicInput">
+				<input type="text" name="myInputs0" required>
+			    </div>
+			    <input class = 'submit' type="submit" value="Submit">
+
+			    <input class ='add_input' type="button" value="Add another text input" onClick="addInput('dynamicInput');">
 			</form>
 		    </div>
 		    
-		    <div class="bs-example">
-			<input type="text" class="typeahead tt-query" autocomplete="off" spellcheck="false">
-		    </div>
-		    <div class = "container">
-			{% for lang in languages %}
-			    <p>{{ lang }} </p>
-			{% end %}
-		    </div>
-		    
-            </div>
-        </div>
-    </div>
-</div>
-
+		    <br/>
+		    <br/>
+		</div><!--jumbotron-->
+	    </div><!--row-->
+	</div><!--page content-->
+    </div><!--page content wrapper-->
+</div> <!--wrapper-->
 </body>
 
 </html>
