--- a/static/css/stylesheet.css
+++ b/static/css/stylesheet.css
@@ -111,4 +111,16 @@
 
 }
 
+ul {
+  list-style-type: None;
+}
 
+#x {
+  color: red;
+  padding: 0;
+  border: none;
+  background: none;
+}
+
+/*  display: none;
+}*/
