--- a/template/register.html
+++ b/template/register.html
@@ -19,7 +19,7 @@
         
         <div id = "form_btn">
             <p></p>
-            <input id = "signin-btn" class = "btn btn-blue" type = "submit" value = "Sign In" tabindex = "3">
+            <input id = "signin-btn" class = "btn btn-blue" type = "submit" value = "Sign Up" tabindex = "3">
         <div>
     </form>
 	<br/>
