--- a/static/css/stylesheet.css
+++ b/static/css/stylesheet.css
@@ -30,9 +30,6 @@
   width: 100%;
 }
 
-.jumbotron {
-  height: 10000px;   
-}
 .sidebar-nav {
   position: absolute;
   top: 0;
@@ -111,4 +108,16 @@
 
 }
 
+ul {
+  list-style-type: None;
+}
 
+#x {
+  color: red;
+  padding: 0;
+  border: none;
+  background: none;
+}
+
+/*  display: none;
+}*/
