--- a/template/sidebar.html
+++ b/template/sidebar.html
@@ -42,6 +42,11 @@
                        <span class="fa fa-user solo">Definitions</span>
                    </a>
                </li>
+	       <li >
+		    <a href= "/auth/logout/" data-scroll>
+			<span class = 'fa fa-user solo'> Log out </span>
+		    </a>
+	       </li>
            </ul>
        </nav>
    </div>
