--- a/template/account.html
+++ b/template/account.html
@@ -61,6 +61,11 @@
                        <span class="fa fa-user solo">Definitions</span>
                    </a>
                </li>
+	       <li >
+		    <a href= "/auth/logout/" data-scroll>
+			<span class = 'fa fa-user solo'> Log out {{user}}</span>
+		    </a>
+	       </li>
            </ul>
        </nav>
    </div>
