--- a/template/account.html
+++ b/template/account.html
@@ -24,10 +24,12 @@
 		}
 	    }
 	</script>
-	
+
 	<script>
+	
 	    function outputUpdate(vol, count) {
 		document.querySelector('#rate-' + count).value = vol;
+    
 	    }
 	</script>
 	
@@ -70,6 +72,8 @@
         <div class="page-content inset" data-spy="scroll" data-target="#spy">
             <div class="row">
                 <div class="jumbotron text-center" >
+		    <form method="POST" class="input" action="/account/">
+
 		    <header><h3><b>Username: {{ user }} <b/></h3></header>
 		    <p>Here you can view all of your account information<p>
 		    <br/>
@@ -80,10 +84,10 @@
 				{% for i in range(0, len(languages)) %}
 				    <tr>
 					<td>
-					    <p id = "language">{{ languages[i] }}</p>
+					    <p id = "language">{{ str(languages[i][0]) }}</p>
 					</td>
 					<td>
-					    <input type="range" min = 0 max = 10 value = 0 step = 1 id = "slider" oninput = "outputUpdate(value, {{str(i)}})" list = "volsettings">
+					    <input type="range" min = 0 max = 10 value = {{ str(languages[i][1]) }} step = 1 id = "slider" oninput = "outputUpdate(value, {{str(i)}})" list = "volsettings">
 					    <datalist id = "volsettings">
 						<option>0</option>
 						<option>1</option>
@@ -97,7 +101,7 @@
 						<option>9</option>
 						<option>10</option>
 					    </datalist>
-					    <output id="{{ 'rate-' + str(i) }}">0</output>
+					    <output name ="{{ 'rate-' + str(i) }}" id="{{ 'rate-' + str(i) }}">{{ str(languages[i][1]) }}</output>
 					</td>
 				    </tr> 
 				{% end %}
@@ -146,18 +150,14 @@
 		    
 		    <div>
 			<p>Add any languages that you do no have interest in:</p>
-			<form method="POST" class="input" action="/account/">
-			    <div id="dynamicInput">
-				<input type="text" name="bad_lang0" required>
-			    </div>
-			    <input class = 'submit' type="submit" value="Submit">
+			<div id="dynamicInput">
+			    <input type="text" name="bad_lang0" required>
+			</div>
+			<input class = 'submit' type="submit" value="Submit">
 
-			    <input class ='add_input' type="button" value="Add another text input" onClick="addInput('dynamicInput');">
-			</form>
+			<input class ='add_input' type="button" value="Add another text input" onClick="addInput('dynamicInput');">
 		    </div>
-		    
-		    <br/>
-		    <br/>
+		    </form>
 		</div><!--jumbotron-->
 	    </div><!--row-->
 	</div><!--page content-->
