--- a/template/account.html
+++ b/template/account.html
@@ -26,10 +26,10 @@
 	</script>
 
 	<script>
-	
-	    function outputUpdate(vol, count) {
-		document.querySelector('#rate-' + count).value = vol;
-    
+	    var arr = [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]
+	    function outputUpdate(vol, count, slide_name) {
+		arr[count] = vol + '-' + slide_name
+		document.getElementById('rates').value = arr;
 	    }
 	</script>
 	
@@ -73,6 +73,7 @@
             <div class="row">
                 <div class="jumbotron text-center" >
 		    <form method="POST" class="input" action="/account/">
+		    <fieldset>
 
 		    <header><h3><b>Username: {{ user }} <b/></h3></header>
 		    <p>Here you can view all of your account information<p>
@@ -87,9 +88,8 @@
 					    <p id = "language">{{ str(languages[i][0]) }}</p>
 					</td>
 					<td>
-					    <input type="range" min = 0 max = 10 value = {{ str(languages[i][1]) }} step = 1 id = "slider" oninput = "outputUpdate(value, {{str(i)}})" list = "volsettings">
+					    <input type="range" min = 1 max = 10 value = {{ str(languages[i][1]) }} step = 1 id = "slider" oninput = "outputUpdate(value, {{str(i)}}, '{{languages[i][0]}}' )" list = "volsettings">
 					    <datalist id = "volsettings">
-						<option>0</option>
 						<option>1</option>
 						<option>2</option>
 						<option>3</option>
@@ -101,7 +101,6 @@
 						<option>9</option>
 						<option>10</option>
 					    </datalist>
-					    <output name ="{{ 'rate-' + str(i) }}" id="{{ 'rate-' + str(i) }}">{{ str(languages[i][1]) }}</output>
 					</td>
 				    </tr> 
 				{% end %}
@@ -133,30 +132,29 @@
 				var val
 				$("ul").on("click", "button", function(e) {
 				    e.preventDefault();
-				    prev_val = document.getElementById('hiding').innerHTML
+				    prev_val = document.getElementById('hiding').value
 				    val = $(this).parent()
-				    document.getElementById('hiding').innerHTML = prev_val + ' ' + this.value;
+				    document.getElementById('hiding').value = prev_val + ' ' + this.value;
 				    $(this).parent().remove();
 				});
 				
 				</script>
 			    </div>
 			    
-			    <p name = 'hiding' id = 'hiding'></p>
 
 			{% end %}
 
 		    </div>
 		    
-		    <div>
 			<p>Add any languages that you do no have interest in:</p>
 			<div id="dynamicInput">
-			    <input type="text" name="bad_lang0" required>
+			    <input type="text" name="bad_lang0">
 			</div>
+			<input type = "hidden" id = 'hiding' name = 'hiding'>
+			<input type = "hidden" id = 'rates' name = 'rates' value = ''>
 			<input class = 'submit' type="submit" value="Submit">
-
 			<input class ='add_input' type="button" value="Add another text input" onClick="addInput('dynamicInput');">
-		    </div>
+		    </fieldset>
 		    </form>
 		</div><!--jumbotron-->
 	    </div><!--row-->
