--- a/static/css/stylesheet.css
+++ b/static/css/stylesheet.css
@@ -42,7 +42,6 @@
 .sidebar-nav li {
   line-height: 40px;
   text-indent: 20px;
-
 }
 
 .sidebar-nav li a {
@@ -120,6 +119,14 @@ ul {
   background: none;
 }
 
-/*  display: none;
-<<<<<<< Updated upstream
-}*/
+.login {
+  text-align: center;
+}
+
+.jaguar {
+  margin: auto;
+  background-image: url("jaguar.jpeg");
+  width: 300px;
+  height: 200px;
+  background-repeat: no-repeat;
+}
