--- a/template/learn.html
+++ b/template/learn.html
@@ -59,7 +59,7 @@
                </li>
 	       <li >
 		    <a href= "/auth/logout/" data-scroll>
-			<span class = 'fa fa-user solo'> Log out {{user}}</span>
+			<span class = 'fa fa-user solo'> Logout {{user}}</span>
 		    </a>
 	       </li>
            </ul>
@@ -71,27 +71,46 @@
         <div class="page-content inset" data-spy="scroll" data-target="#spy">
             <div class="row">
                 <div class="jumbotron text-center" >
-		    <form method = "post" class = "container", action = "/result/">
+		    <form method = "post" class = "container">
+		    <input type = "radio" Name = "Functional" Value = "NOFunctional" style = "display: none;" checked = "checked"/> <br>
 		    <h3> Select the checkboxes that fits your interests </h3> <br>
+		     <input type = "checkbox" Name = "Usage_1" Value = "NO" style = "display: none;" checked = "checked"/> <br>
+		    <input type = "checkbox" Name = "Usage_2" Value = "NO" style = "display: none;" checked = "checked"/> <br>
+		    <input type = "checkbox" Name = "Usage_3" Value = "NO" style = "display: none;" checked = "checked"/> <br>
 		    <p> Do you prefer Declarative or Imperative language? </p>
-		    <input type = "radio" Name = "type" Value = "Declarative"> Declarative <br>
-		    <input type = "radio" Name = "type" Value = "Imperative"> Imperative <br>
+		    <input type = "radio" Name = "type" Value = "Declarative" d> Declarative <br>
+		    <input type = "radio" Name = "type" Value = "Imperative" d> Imperative <br>
+		    <input type = "radio" Name = "type" Value = "NO" style = "display: none;" checked = "checked"/> <br>
+		    
 		    <p> Do you like compiled or interpreted langauge better? </p>
-		    <input type = "radio" Name = "process" Value  = "Compiled"> Compiled <br>
-		    <input type = "radio" Name = "process" Value = "Interpreted"> Interpreted <br>
+		    <input type = "radio" Name = "process" Value  = "Compiled" d> Compiled <br>
+		    <input type = "radio" Name = "process" Value = "Interpreted" d> Interpreted <br>
+		    <input type = "radio" Name = "process" Value = "NO" style = "display: none;" checked = "checked"/> <br>		    
+		    
 		    <p> Do you want to play with functional language? </p>
-		    <input type = "radio" Name = "Functional" Value = "Functional"> Functional <br>
+		    <input type = "radio" Name = "Functional" Value = "Functional" > Functional <br>
+		    <input type = "radio" Name = "Functional" Value = "NOFunctional" style = "display: none;" checked = "checked"/> <br>
+		    
 		    <p> Which type do you prefer? </p>
-		    <input type = "radio" Name = "typing" Value = "Dynamic"> Dynamic <br>
-		    <input type = "radio" Name = "typing" Value = "Static"> Static <br>
-		    <!--<input type = "Checkbox" Name = "JVM" Value = "JVM"> JVM <br>-->
-		    <!--<input type = "Checkbox" Name = "SQVM" Value = "SQVM"> SQVM <br>-->
-		    <!--<input type = "Checkbox" Name = "WebApp" Value = "WebApp"> Web App<br>-->
-		    <!--<input type = "Checkbox" Name = "Game" Value = "Game"> Game<br>-->
-		    <!--<input type = "Checkbox" Name = "MobileApp" Value = "MobileApp"> Mobile App<br>-->
-		    <!--<input type = "Checkbox" Name = "InfoProcessing" Value ="InfoProcessing"> Info Processing<br>-->
-		    <!--<input type = "Checkbox" Name = "UtilityScripts" Value = "UtilityScripts"> Utility Scripts<br>-->
+		    <input type = "radio" Name = "typing" Value = "Dynamic"d> Dynamic <br>
+		    <input type = "radio" Name = "typing" Value = "Static" d> Static <br>
+		    <input type = "radio" Name = "typing" Value = "NO" style = "display: none;" checked = "checked"/> <br>		    
+		    
+		    <p> Which type of VM are you interested in? </p>
+		    <input type = "radio" Name = "VM" Value = "JVM" d> JVM <br>
+		    <input type = "radio" Name = "VM" Value = "SQVM" d> SQVM <br>
+		    <input type = "radio" Name = "VM" Value = "NO" style = "display: none;" checked = "checked"/> <br>		    
+		    
+		    
+		    <p> What are you looking to do?</p>
+		   
+		    <input type = "checkbox" Name = "Usage_1" Value = "Game" d> Game<br>
+		    <input type = "checkbox" Name = "Usage_2" Value = "MobileApp" d> Mobile App<br>
+		    <!--<input type = "radio" Name = "Usage" Value ="InfoProcessing" d> Info Processing<br>-->
+		    <input type = "checkbox" Name = "Usage_3" Value = "UtilityScripts"d> Utility Scripts<br>
 		    <br>
+		    
+		    
 		    <input type ="submit"  value= "Submit"> 
 		    </form>
 		</div>    
