--- a/template/login.html
+++ b/template/login.html
@@ -1,15 +1,25 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Login</title>
-    <link href="/static/css/jcarousel.css" rel="stylesheet" />
-    <link href="/static/css/notification.css" rel="stylesheet" />
+    <title>Programming Languages</title>
+    <meta charset = "utf-8">
+    <meta name = "viewport" content = "width=device-width, initial-scale=1">
+    <link rel = "stylesheet" href = "http://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+    <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css">
+    <link href="/static/css/stylesheet.css" rel="stylesheet" />
 </head>
 <body>
     <hr/>
-
-    <h1>please login:</h1>
+    <div class = "container login">
+    <div class = "jaguar login"></div>
+    <h1>Welcome to JJaguar <h1/> 
+    <h2>The Programming Language Recommendation Engine</h2>
+    </div>
     <br/>
+    <div class = "jumbotron container login">
+    <h2>Please Login Below:</h2>
+
     <form action = "/auth/login/" method = "post" id = "login_form">
         <fieldset>
             <label for = "username">Username </label>
@@ -26,9 +36,9 @@
             <input id = "signin-btn" class = "btn btn-blue" type = "submit" value = "Sign In" tabindex = "3">
         <div>
     </form>
-
+    </div>
     <br/>
-    <a href="/register/">register</a>
+    <a class="btn btn-blue" type="button" href="/register/">Register</a>
     <br/>
 
 </body>
