the rest of everything

--- a/template/learn.html
+++ b/template/learn.html
@@ -73,25 +73,25 @@
                 <div class="jumbotron text-center" >
 		    <form method = "post" class = "container">
 		    <input type = "radio" Name = "Functional" Value = "NOFunctional" style = "display: none;" checked = "checked"/> <br>
-		    <h3> Select the checkboxes that fits your interests </h3> <br>
+		    <h3> Select the checkboxes that fit your interests </h3> <br>
 		     <input type = "checkbox" Name = "Usage_1" Value = "NO" style = "display: none;" checked = "checked"/> <br>
 		    <input type = "checkbox" Name = "Usage_2" Value = "NO" style = "display: none;" checked = "checked"/> <br>
 		    <input type = "checkbox" Name = "Usage_3" Value = "NO" style = "display: none;" checked = "checked"/> <br>
-		    <p> Do you prefer Declarative or Imperative language? </p>
+		    <p> Do you prefer Declarative or Imperative languages? </p>
 		    <input type = "radio" Name = "type" Value = "Declarative" d> Declarative <br>
 		    <input type = "radio" Name = "type" Value = "Imperative" d> Imperative <br>
 		    <input type = "radio" Name = "type" Value = "NO" style = "display: none;" checked = "checked"/> <br>
 		    
-		    <p> Do you like compiled or interpreted langauge better? </p>
+		    <p> Do you like compiled or interpreted langauges better? </p>
 		    <input type = "radio" Name = "process" Value  = "Compiled" d> Compiled <br>
 		    <input type = "radio" Name = "process" Value = "Interpreted" d> Interpreted <br>
 		    <input type = "radio" Name = "process" Value = "NO" style = "display: none;" checked = "checked"/> <br>		    
 		    
-		    <p> Do you want to play with functional language? </p>
+		    <p> Do you want to use a functional language? </p>
 		    <input type = "radio" Name = "Functional" Value = "Functional" > Functional <br>
 		    <input type = "radio" Name = "Functional" Value = "NOFunctional" style = "display: none;" checked = "checked"/> <br>
 		    
-		    <p> Which type do you prefer? </p>
+		    <p> Which kind of typing do you prefer? </p>
 		    <input type = "radio" Name = "typing" Value = "Dynamic"d> Dynamic <br>
 		    <input type = "radio" Name = "typing" Value = "Static" d> Static <br>
 		    <input type = "radio" Name = "typing" Value = "NO" style = "display: none;" checked = "checked"/> <br>		    
